# GoLogicDynamicLinkLibrary

./: .gitattributes  .gitignore  CMakeLists.txt  GoLogic.cpp  GoLogic.h  LICENSE  main.cpp
src/headers/: go_logic.h
src/sources/: go_logic.cpp  move.cpp  pass.cpp  regret.cpp  set_stone_logic.cpp
